--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,56 +1,68 @@
 * {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
-}
-nav {
- background-color: steelblue;
- padding: 10px;
-} 
-nav a {
- color: white;
- display: block;
- padding: 20px;
-}
-h1 {
- color: steelblue;
-}
-img {
- width: 150px;
- height: auto;
- border: 1px solid steelblue;
- padding: 2px;
- box-shadow: 0,0 30px grey;
-}
-p {
-  padding: 10px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+nav {
+    background-color: steelblue;
+    padding: 10px;
+}
+
+nav a {
+    color: white;
+    display: block;
+    padding: 20px;
+}
+
+h1 {
+    color: steelblue;
+}
+
+img {
+    width: 150px;
+    height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px grey;
+}
+
+p {
+    padding: 10px;
+}
 
 main {
- max-width: 840px;
+  max-width: 840px;
+}
+
+main img {
+    width: 150px;
+    height: auto;
+}
 
 aside {
- margin: 1em;
- border: 1px solid rgba(0,0,0.1);
- padding: 1em;
- background-color: #eee;
- color: #333;
- text-align: center;
-} 
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
 
 aisde img {
     width: 200px;
     height: auto;
-}    
-main img {
-    width: 150px;
-    height: auto;
-}    
-p { padding: 0;}
+}
+
+p {
+    padding: 0;
+}
+
 footer {
     margin-top: 1em;
     border-top: 1px solid #000;
     text-align: center;
-}    
 }
+
+
