--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,9 +89,12 @@ aside {
   text-align: center;
 
 
-  aside h2 {
-    position: absolute;
-    top: 47px;
-    left: 150px;
-  }
+aside h2 {
+  position: absolute;
+  top: 47px;
+  left: 150px;
+}
+aside {
+ position: relative;
+}
 }
