--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,21 +38,16 @@ main {
 main img {
     width: 150px;
     height: auto;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
-main img {
-  /* setting the float */
-  float: right;
-}
+
 
 
 aside {
-    width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
+    width: 20em;
     text-align: center;
+    position: relative;
 }
 
 aside h2 {
@@ -84,17 +79,9 @@ background-color: #ddd;
 color: #000;
 }
 
-aside {
-  width: 20em;
-  text-align: center;
-
-
 aside h2 {
   position: absolute;
   top: 47px;
   left: 150px;
 }
-aside {
- position: relative;
-}
-}
+
